--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,7 @@
 [versions]
+volley = "1.2.1" #bunu ben ekledim
+picasso = "2.8" # bunu da ben ekledim
+playServicesAds = "24.2.0" #bunu da ben ekledim
 agp = "8.8.2"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -7,8 +10,13 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
+playServicesAdsApi = "24.2.0"
+
 
 [libraries]
+volley = { group = "com.android.volley", name = "volley", version.ref = "volley" } #bunu ben ekledim
+picasso = { group = "com.squareup.picasso", name = "picasso", version.ref = "picasso" } #bunu da ben ekledim
+play-services-ads = { group = "com.google.android.gms", name = "play-services-ads", version.ref = "playServicesAds" } #bunu da ben ekledim
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -16,6 +24,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+play-services-ads-api = { group = "com.google.android.gms", name = "play-services-ads-api", version.ref = "playServicesAdsApi" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
